terraform/ec2.tf
resource "aws_default_vpc" "default" {

}

data "aws_ami" "ubuntu" {

  most_recent = true

  owners = ["099720109477"]

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd-gp3/ubuntu-noble-24.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

data "aws_eip" "ghost_eip" {

  public_ip = var.public_ip
}
data "aws_security_group" "launch-wizard-2" {

  name = "launch-wizard-2"
}
resource "aws_eip_association" "ghost_assoc" {

  instance_id = aws_instance.ghost_server.id

  allocation_id = data.aws_eip.ghost_eip.id
}
resource "aws_instance" "ghost_server" {

  ami = var.ami_id

  instance_type = var.instance_type

  key_name = var.key_name

  vpc_security_group_ids = [aws_security_group.ghost_sg.id]

  # associate_public_ip_address = true

  tags = {
    Name = "ghost-server"
  }
}
