terraform/security_group.tf
data "aws_security_group" "launch-wizard-2" {

  name = "launch-wizard-2"
}
resource "aws_security_group" "ghost_sg" {

  name = "ghost_sg"
  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"

    security_groups = [data.aws_security_group.jenkins_sg.id]
  }
  ingress {

    from_port = 443
    to_port   = 443
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }


  ingress {

    from_port = 80
    to_port   = 80
    protocol  = "tcp"

    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {

    from_port = 0
    to_port   = 0
    protocol  = "-1"

    cidr_blocks = ["0.0.0.0/0"]
  }
}

# auto‑import if they exist (HCL‑based import)
